--- a/src/assets/style/index.less
+++ b/src/assets/style/index.less
@@ -1,29 +1,3 @@
 @import "../theme/index.less";
-@import '~antd-mobile/lib/style/mixins';
-@import '~antd-mobile/lib/style/anim';
-
-*,
-*:before,
-*:after {
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-
-body {
-  background-color: @fill-body;
-  font-size: @font-size-base;
-}
-
-*[contenteditable] {
-  -webkit-user-select: auto !important;
-}
-
-*:focus {
-  outline: none;
-}
-
-a {
-  background: transparent;
-  text-decoration: none;
-  outline: none;
-}
-
+@import './antd-core.less';
+@import '~antd-mobile/lib/style/components.less';
